--- a/package.json
+++ b/package.json
@@ -9,10 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@planetscale/database": "^1.4.0",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.4",
+    "kysely": "^0.22.0",
+    "kysely-planetscale": "^1.1.0",
     "next": "13.0.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "typescript": "^4.9.3"
+  },
+  "devDependencies": {
+    "@types/node": "18.11.9",
+    "@types/react": "18.0.25"
   }
 }
