--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
   },
   "dependencies": {
     "@planetscale/database": "^1.4.0",
+    "autoprefixer": "^10.4.13",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.4",
     "kysely": "^0.22.0",
     "kysely-planetscale": "^1.1.0",
     "next": "13.0.4",
+    "postcss": "^8.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "tailwindcss": "^3.2.4",
     "typescript": "^4.9.3"
   },
   "devDependencies": {
