--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@planetscale/database": "^1.4.0",
+    "@tremor/react": "^1.1.5",
     "autoprefixer": "^10.4.13",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.4",
@@ -20,10 +21,15 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "^3.2.4",
-    "typescript": "^4.9.3"
-  },
-  "devDependencies": {
+    "typescript": "^4.9.3",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25"
+  },
+  "pnpm": {
+    "peerDependencyRules": {
+      "ignoreMissing": [
+        "prop-types"
+      ]
+    }
   }
 }
