--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@planetscale/database": "^1.4.0",
-    "@tremor/react": "^1.1.5",
+    "@planetscale/database": "^1.4.1",
+    "@tremor/react": "^1.2.2",
+    "@types/node": "18.11.9",
+    "@types/react": "18.0.25",
     "autoprefixer": "^10.4.13",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.4",
@@ -21,9 +23,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "^3.2.4",
-    "typescript": "^4.9.3",
-    "@types/node": "18.11.9",
-    "@types/react": "18.0.25"
+    "typescript": "^4.9.3"
   },
   "pnpm": {
     "peerDependencyRules": {
