Add xata to latency tests
Signed-off-by: Alexis Rico <sferadev@gmail.com>

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tremor/react": "^1.2.2",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
+    "@xata.io/client": "^0.21.5",
     "autoprefixer": "^10.4.13",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.4",
