feat: add supabase (#4)

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^1.0.6",
     "@planetscale/database": "^1.4.1",
+    "@supabase/supabase-js": "^2.4.0",
     "@tremor/react": "^1.2.2",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
