Add Convex as data provider (#10)
* Use different query

* Add Convex to the demo.

* Fix.

* Merge

* remove package-lock.json

* Use edge endpoint

* Fix.

* Check in lock file.

* Actually use the edge.

* Fix review comments

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@upstash/redis": "^1.19.3",
     "@xata.io/client": "^0.22.1",
     "autoprefixer": "^10.4.13",
+    "convex": "^0.9.1",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "kysely": "^0.23.4",
