--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@heroicons/react": "1.0.6",
+    "@neondatabase/serverless": "^0.2.8",
     "@planetscale/database": "^1.5.0",
     "@supabase/supabase-js": "^2.7.1",
     "@tremor/react": "2.0.1",
