--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 NEXT_PUBLIC_CONVEX_URL="https://warmhearted-scorpion-889.convex.cloud"
+TIGRIS_API_URL="https://api.cell1.us-east-1.aws.tigrisdata.cloud/v1"
