--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@heroicons/react": "1.0.6",
+    "@libsql/client": "^0.1.1",
     "@neondatabase/serverless": "^0.2.8",
     "@planetscale/database": "^1.6.0",
     "@supabase/supabase-js": "^2.12.1",
@@ -22,7 +23,7 @@
     "eslint-config-next": "13.2.4",
     "kysely": "^0.23.5",
     "kysely-planetscale": "^1.3.0",
-    "next": "13.2.4",
+    "next": "^13.3.0",
     "postcss": "^8.4.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
