--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@neondatabase/serverless": "^0.2.8",
     "@planetscale/database": "^1.6.0",
     "@supabase/supabase-js": "^2.12.1",
-    "@tremor/react": "2.1.0",
+    "@tremor/react": "^2.4.1",
     "@types/node": "18.15.11",
     "@types/react": "18.0.31",
     "@upstash/redis": "^1.20.1",
