--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@libsql/client": "^0.1.1",
     "@neondatabase/serverless": "^0.2.8",
     "@planetscale/database": "^1.6.0",
+    "@polyscale/serverless-js": "^1.0.2",
     "@supabase/supabase-js": "^2.12.1",
     "@tremor/react": "^2.4.1",
     "@types/node": "18.15.11",
