--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@types/node": "18.15.11",
     "@types/react": "18.0.31",
     "@upstash/redis": "^1.20.1",
+    "@vercel/kv": "^0.2.2",
+    "@vercel/postgres": "^0.4.0",
     "@xata.io/client": "^0.23.4",
     "autoprefixer": "^10.4.14",
     "convex": "^0.12.1",
@@ -24,7 +26,7 @@
     "eslint-config-next": "13.2.4",
     "kysely": "^0.23.5",
     "kysely-planetscale": "^1.3.0",
-    "next": "^13.4.5",
+    "next": "^13.4.10",
     "postcss": "^8.4.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
