--- a/package.json
+++ b/package.json
@@ -8,31 +8,31 @@
   },
   "dependencies": {
     "@heroicons/react": "1.0.6",
-    "@libsql/client": "^0.1.1",
-    "@neondatabase/serverless": "^0.4.26",
-    "@planetscale/database": "^1.6.0",
-    "@polyscale/serverless-js": "^1.0.2",
-    "@supabase/supabase-js": "^2.12.1",
-    "@tidbcloud/serverless": "^0.0.3",
-    "@tremor/react": "^2.4.1",
-    "@types/node": "18.15.11",
-    "@types/react": "18.0.31",
-    "@upstash/redis": "^1.20.1",
-    "@vercel/kv": "^0.2.2",
-    "@vercel/postgres": "^0.4.0",
-    "@xata.io/client": "^0.23.4",
-    "autoprefixer": "^10.4.14",
-    "convex": "^0.12.1",
-    "eslint": "8.37.0",
-    "eslint-config-next": "13.2.4",
-    "kysely": "^0.23.5",
-    "kysely-planetscale": "^1.3.0",
-    "next": "^13.4.10",
-    "postcss": "^8.4.21",
+    "@libsql/client": "^0.3.5",
+    "@neondatabase/serverless": "^0.6.0",
+    "@planetscale/database": "^1.11.0",
+    "@polyscale/serverless-js": "^1.4.0",
+    "@supabase/supabase-js": "^2.38.0",
+    "@tidbcloud/serverless": "^0.0.6",
+    "@tremor/react": "2.4.1",
+    "@types/node": "20.8.4",
+    "@types/react": "18.2.28",
+    "@upstash/redis": "^1.23.3",
+    "@vercel/kv": "^0.2.3",
+    "@vercel/postgres": "^0.5.0",
+    "@xata.io/client": "^0.26.7",
+    "autoprefixer": "^10.4.16",
+    "convex": "0.12.1",
+    "eslint": "8.51.0",
+    "eslint-config-next": "13.5.4",
+    "kysely": "^0.26.3",
+    "kysely-planetscale": "^1.4.0",
+    "next": "^13.5.4",
+    "postcss": "^8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5.0.2"
+    "tailwindcss": "^3.3.3",
+    "typescript": "^5.2.2"
   },
   "pnpm": {
     "peerDependencyRules": {
