--- a/package.json
+++ b/package.json
@@ -1,38 +1,41 @@
 {
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@heroicons/react": "1.0.6",
-    "@libsql/client": "^0.3.5",
-    "@neondatabase/serverless": "^0.8.1",
-    "@planetscale/database": "^1.11.0",
+    "@headlessui/react": "^1.7.18",
+    "@headlessui/tailwindcss": "^0.2.0",
+    "@heroicons/react": "2.1.1",
+    "@libsql/client": "^0.5.6",
+    "@neondatabase/serverless": "^0.9.0",
+    "@planetscale/database": "^1.16.0",
     "@polyscale/serverless-js": "^1.4.0",
-    "@supabase/supabase-js": "^2.38.0",
-    "@tidbcloud/serverless": "^0.0.6",
-    "@tremor/react": "2.4.1",
-    "@types/node": "20.8.4",
-    "@types/react": "18.2.28",
-    "@upstash/redis": "^1.23.3",
-    "@vercel/kv": "^0.2.3",
-    "@vercel/postgres": "^0.5.0",
-    "@xata.io/client": "^0.26.7",
-    "autoprefixer": "^10.4.16",
-    "convex": "1.7.1",
-    "eslint": "8.51.0",
-    "eslint-config-next": "13.5.4",
-    "kysely": "^0.26.3",
+    "@supabase/supabase-js": "^2.39.8",
+    "@tailwindcss/forms": "^0.5.7",
+    "@tidbcloud/serverless": "^0.1.0",
+    "@tremor/react": "3.14.1",
+    "@types/node": "20.11.27",
+    "@types/react": "18.2.65",
+    "@upstash/redis": "^1.28.4",
+    "@vercel/kv": "^1.0.1",
+    "@vercel/postgres": "^0.7.2",
+    "@xata.io/client": "^0.29.3",
+    "autoprefixer": "^10.4.18",
+    "convex": "1.10.0",
+    "eslint": "8.57.0",
+    "eslint-config-next": "14.1.3",
+    "kysely": "^0.27.3",
     "kysely-planetscale": "^1.4.0",
-    "next": "^13.5.4",
-    "postcss": "^8.4.31",
+    "next": "14.2.0-canary.21",
+    "postcss": "^8.4.35",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "^3.3.3",
-    "typescript": "^5.2.2"
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.4.2"
   },
   "pnpm": {
     "peerDependencyRules": {
