--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
     "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "gen:planetscale": "prisma generate --schema ./prisma-planetscale/schema.prisma",
+    "gen:supabase": "prisma generate --schema ./prisma-supabase/schema.prisma"
+
   },
   "dependencies": {
     "@headlessui/react": "^1.7.18",
@@ -14,6 +17,7 @@
     "@neondatabase/serverless": "^0.9.0",
     "@planetscale/database": "^1.16.0",
     "@polyscale/serverless-js": "^1.4.0",
+    "@prisma/adapter-planetscale": "^5.13.0",
     "@supabase/supabase-js": "^2.39.8",
     "@tailwindcss/forms": "^0.5.7",
     "@tidbcloud/serverless": "^0.1.0",
@@ -26,12 +30,16 @@
     "@xata.io/client": "^0.29.3",
     "autoprefixer": "^10.4.18",
     "convex": "1.10.0",
+    "drizzle-orm": "^0.30.9",
     "eslint": "8.57.0",
     "eslint-config-next": "14.1.3",
     "kysely": "^0.27.3",
     "kysely-planetscale": "^1.4.0",
+    "mysql2": "^3.9.7",
     "next": "14.2.0-canary.21",
     "postcss": "^8.4.35",
+    "postgres": "^3.4.4",
+    "prisma": "^5.13.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "^3.4.1",
