--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
     "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
     "gen:planetscale": "prisma generate --schema ./prisma-planetscale/schema.prisma",
     "gen:supabase": "prisma generate --schema ./prisma-supabase/schema.prisma"
   },
@@ -21,26 +20,24 @@
     "@tailwindcss/forms": "^0.5.7",
     "@tidbcloud/serverless": "^0.1.0",
     "@tremor/react": "3.14.1",
-    "@types/node": "20.11.27",
-    "@types/react": "18.2.65",
+    "@types/node": "20.12.8",
+    "@types/react": "18.3.1",
     "@upstash/redis": "^1.28.4",
     "@vercel/kv": "^1.0.1",
-    "@vercel/postgres": "^0.7.2",
+    "@vercel/postgres": "^0.8.0",
     "@xata.io/client": "^0.29.3",
     "autoprefixer": "^10.4.18",
     "convex": "1.11.2",
     "drizzle-orm": "^0.30.9",
-    "eslint": "8.57.0",
-    "eslint-config-next": "14.1.3",
     "kysely": "^0.27.3",
     "kysely-planetscale": "^1.4.0",
     "mysql2": "^3.9.7",
-    "next": "14.2.0-canary.21",
+    "next": "14.2.3",
     "postcss": "^8.4.35",
     "postgres": "^3.4.4",
     "prisma": "^5.13.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.4.2"
   },
