--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_CONVEX_URL="https://warmhearted-scorpion-889.convex.cloud"
+NEXT_PUBLIC_CONVEX_URL="https://warmhearted-scorpion-889.edge.convex.cloud"
 TIGRIS_API_URL="https://api.cell1.us-east-1.aws.tigrisdata.cloud/v1"
