--- a/package.json
+++ b/package.json
@@ -6,17 +6,20 @@
     "start": "next start",
     "gen:planetscale": "prisma generate --schema ./prisma-planetscale/schema.prisma",
     "gen:supabase": "prisma generate --schema ./prisma-supabase/schema.prisma",
-    "gen:xata": "prisma generate --schema ./prisma-xata/schema.prisma"
+    "gen:xata": "prisma generate --schema ./prisma-xata/schema.prisma",
+    "gen:turso": "prisma generate --schema ./prisma-turso/schema.prisma"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.18",
     "@headlessui/tailwindcss": "^0.2.0",
     "@heroicons/react": "2.1.1",
-    "@libsql/client": "^0.5.6",
+    "@libsql/client": "^0.6.0",
     "@neondatabase/serverless": "^0.9.0",
     "@planetscale/database": "^1.16.0",
     "@polyscale/serverless-js": "^1.4.0",
+    "@prisma/adapter-libsql": "^5.13.0",
     "@prisma/adapter-planetscale": "^5.13.0",
+    "@prisma/client": "5.13.0",
     "@supabase/supabase-js": "^2.39.8",
     "@tailwindcss/forms": "^0.5.7",
     "@tidbcloud/serverless": "^0.1.0",
