--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "gen:planetscale": "prisma generate --schema ./prisma-planetscale/schema.prisma",
     "gen:supabase": "prisma generate --schema ./prisma-supabase/schema.prisma",
     "gen:xata": "prisma generate --schema ./prisma-xata/schema.prisma",
-    "gen:turso": "prisma generate --schema ./prisma-turso/schema.prisma"
+    "gen:turso": "prisma generate --schema ./prisma-turso/schema.prisma",
+    "gen:neon": "prisma generate --schema ./prisma-neon/schema.prisma"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.18",
@@ -18,6 +19,7 @@
     "@planetscale/database": "^1.16.0",
     "@polyscale/serverless-js": "^1.4.0",
     "@prisma/adapter-libsql": "^5.13.0",
+    "@prisma/adapter-neon": "^5.13.0",
     "@prisma/adapter-planetscale": "^5.13.0",
     "@prisma/client": "5.13.0",
     "@supabase/supabase-js": "^2.39.8",
@@ -43,7 +45,8 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.4.2"
+    "typescript": "^5.4.2",
+    "ws": "^8.17.0"
   },
   "pnpm": {
     "peerDependencyRules": {
@@ -51,5 +54,8 @@
         "prop-types"
       ]
     }
+  },
+  "optionalDependencies": {
+    "bufferutil": "^4.0.8"
   }
 }
