fix: use ctx.waitUntil instead of connection idle timeout (#50)
* fix: use ctx.waitUntil instead of connection idle timeout

* fix: use vercel/functions waitUntil API

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/node": "20.12.8",
     "@types/react": "18.3.1",
     "@upstash/redis": "^1.28.4",
+    "@vercel/functions": "^1.0.1",
     "@vercel/kv": "^1.0.1",
     "@vercel/postgres": "^0.8.0",
     "@xata.io/client": "^0.29.4",
